adding tutorial text changes

--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_0_content.tex
@@ -9,8 +9,9 @@ The Discrete Morphology guide contains several tutorials
 \begin{itemize}
 \item Section \ref{sec:dm_overview}: Overview of the Discrete Morphological models
 \item Section \ref{sec:dm_simple}: A simple discrete morphology analysis
-\item Section \ref{sec:dm_complex}: Two complex discrete morphology models
-\end{itemize}
+\item Section \ref{sec:dm_disc}: A model for allowing state frequency variation across binary characters
+\item Section \ref{sec:dm_dir}: A model for allowing state frequency variation across binary and multistate characters
+\item Section \ref{sec:trace}: Evaluating the MCMC \end{itemize}
 
 \subsection*{Recommended tutorials}
 
