--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/bayes.bib
@@ -68,6 +68,15 @@ url          = {http://www.R-project.org}
 %*********************************************************************************
 % A
 %*********************************************************************************
+@Article{abella2011,
+  Title                    = {Una nueva especie de \textit{{A}griarctos} ({A}iluropodinae, {U}rsidae, {C}arnivora) en la localidad de {N}ombrevilla 2 ({Z}aragoza, {E}spa{\~n}a)},
+  Author                   = {Abella, J and Montoya, P and Morales, J},
+  Journal                  = {Estudios Geol{\'o}gicos},
+  Year                     = {2011},
+  Number                   = {2},
+  Pages                    = {187--191},
+  Volume                   = {67}
+}
 
 @Article{adachi92,
   author    = {J. Adachi and M. Hasegawa},
@@ -1365,6 +1374,16 @@ url          = {http://www.R-project.org}
   year      = 2003,
   volume    = 20,
   pages     = {1252--1259}
+}
+
+@article{freudenstein05,
+	author = {Freudenstein, John V.},
+	title = {Characters, States and Homology},
+	journal = {Systematic Biology},
+	volume = {54},
+	number = {6},
+	pages = {965},
+	year = {2005},
 }
 
 @Article{freckleton03,
@@ -4228,6 +4247,20 @@ url          = {http://www.R-project.org}
   pages     = {277--280}
 }
 
+@article{Phillips06,
+title = "Homology assessment and molecular sequence alignment ",
+journal = "Journal of Biomedical Informatics ",
+volume = "39",
+number = "1",
+pages = "18 - 33",
+year = "2006",
+note = "Phylogenetic Inferencing: Beyond Biology ",
+issn = "1532-0464",
+author = "Aloysius J. Phillips",
+}
+
+
+
 @Article{pitman02,
   author    = {J. Pitman},
   title     = {Combinatorial stochastic processes},
@@ -5684,6 +5717,29 @@ doi 		= {10.1093/sysbio/sys029}
   volume    = 319,
   pages     = {473--476}
 }
+
+@article{wright14,
+  title={Bayesian analysis using a simple likelihood model outperforms parsimony for estimation of phylogeny from discrete morphological data},
+  author={Wright, April M and Hillis, David M},
+  journal={PLoS One},
+  volume={9},
+  number={10},
+  pages={e109210},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+@article{wright16,
+  title={Modeling character change heterogeneity in phylogenetic analyses of morphology through the use of priors},
+  author={Wright, April M and Lloyd, Graeme T and Hillis, David M},
+  journal={Systematic biology},
+  volume={65},
+  number={4},
+  pages={602--611},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
 
 @Article{wright51,
   author    = {S. Wright},
