--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
@@ -18,11 +18,11 @@
 \end{center}
 
 \def \ResourcePath {./}
-\def \GlobalResourcePath {../}
+\def \GlobalResourcePath {./}
 \input{RB_DiscreteMorphology_Tutorial_0_content}
 \input{RB_DiscreteMorphology_Tutorial_1_content}
 `
-\bibliography{\GlobalResourcePath refs}
+\bibliography{\GlobalResourcePath bayes}
 
 Version dated: \today
 
