add example matrix section

--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
@@ -469,7 +469,7 @@ These will contain the new model parameters and models. \par
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[width=0.5\textwidth,angle=0]{\ResourcePath figures/tikz/morpho_gm-eps-converted-to}
+% \includegraphics[width=0.5\textwidth,angle=0]{\ResourcePath figures/tikz/morpho_gm-eps-converted-to} % 
 \caption{\small Graphical model demonstrating the discretized Beta distribution for allowing variable state frequencies.}
 \end{minipage}}
 \label{fig:module-gm}
@@ -713,7 +713,8 @@ Therefore, we would need to run the MCMC chains longer if we were to use these a
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[width=0.75\textwidth,angle=0]{\ResourcePath figures/colortrace}
+%\includegraphics[width=0.75\textwidth,angle=0]{\ResourcePath figures/colortrace}
+%\includegraphics[width=0.75\textwidth,angle=0]{\ResourcePath figures/colortrace}
 \caption{\small The Trace window. The traces are colored by which version of the Mk model they correspond to.}
 \end{minipage}}
 \label{fig:module-gm}
